syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;
    // You'll have to add definitions here.
    uint64 client_id = 4;
    uint64 op_sequence = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    // You'll have to add definitions here.
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}

enum Type {
    Get = 0;
    PutAppend = 1;
}

message RaftCommand {
    Type op_type = 1;
    // encoded data of GetRequest or PutAppendRequest
    bytes data = 2;
}
